# learn_ecommerce

./: README.md  alembic.ini  main.py  pyproject.toml  schema.py
alembic/: README.md  env.py
alembic/versions/: 4fbe2c096ed0_add_user_table.py
api/: category.py  product.py  review.py  user.py
core/: config.py  db.py  security.py
crud/: crud_category.py  crud_product.py  crud_review.py  crud_user.py
model/: models.py
