[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.119.0",
    "passlib>=1.7.4",
    "psycopg[binary,pool]>=3.2.11",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
    "typing>=3.10.0.0",
    "uvicorn>=0.38.0",
]
